:zap: :tada: Backend commit

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\"C:\\Users\\sshabaria\\OneDrive - Mr. Cooper\\Documents\\newDemoDb.mdf\";Integrated Security=True;Connect Timeout=3000"
+    "SqlConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\sshabaria\\source\\repos\\TravelBooking\\TravelBooking\\Database\\TravelManager.mdf;Integrated Security=True;Connect Timeout=30"
   }
 }
